--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,11 @@
   <title>Portfólio Marcelle</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+  <script src="../back4app/script.js" type='module' defer></script>
   <script src="./js/script.js" type='module' defer></script>
+  <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
 </head>
- 
+
 <body>
   <!--=======Top button=======-->
   <div class="scrollTop-btn flex-center">
@@ -73,8 +76,7 @@
         </div>
         <div class="sobre-info">
           <div class="descricao">
-            <p>Meu nome é <span>Marcelle Mascarenhas</span>, sou de Recife - PE  Atualmente sou estudante do curso de Sistemas para Internet da UNICAP (Universidade Católica de Pernambuco), mas curiosamente, essa não é minha primeira faculdade, também cursei Bacharelado em Química na UFPE.</p><br>
-            <p>Se você veio aqui conhecer meu trabalho, saiba que sou apaixonada pelo que faço e estou sempre tentando fazer melhor, porque sempre dá.</p>
+            <p id="info_1"></p>
           </div>
           <a href="" class="btn">Download CV <i class="fas fa-download"></i></a>
         </div>
@@ -106,35 +108,35 @@
             <ul class="bars">
               <li class="bar">
                 <div class="info">
-                  <span>HTML</span>
+                  <span class="skills" id="html"></span>
                   <span>70%</span>
                 </div>
                 <div class="linha html"></div>
               </li>
               <li class="bar">
                 <div class="info">
-                  <span>CSS</span>
+                  <span class="skills" id="css"></span>
                   <span>65%</span>
                 </div>
                 <div class="linha css"></div>
               </li>
               <li class="bar">
                 <div class="info">
-                  <span>JavaScript</span>
+                  <span class="skills" id="javascript"></span>
                   <span>60%</span>
                 </div>
                 <div class="linha javascript"></div>
               </li>
               <li class="bar">
                 <div class="info">
-                  <span>Java</span>
+                  <span class="skills" id="java"></span>
                   <span>60%</span>
                 </div>
                 <div class="linha java"></div>
               </li>
               <li class="bar">
                 <div class="info">
-                  <span>Adobe XD</span>
+                  <span class="skills" id="adobexd"></span>
                   <span>70%</span>
                 </div>
                 <div class="linha adobexd"></div>
@@ -217,6 +219,8 @@
               </div>
             </div>
           </div>
+
+
 </body>
 
 </html>
