--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                 <i class="fas fa-times projeto-close-btn"></i>
                                 <img src="img/img-monalisa.png" alt="">
                                 <p><span>Rede Monalisa - </span> Meu primeiro site desenvolvido para disciplina de Introdução a Programação Web.</p>
-                                <a href="https://github.com/marcelle-mascarenhas/site-monalisa" class="btn">+
+                                <a href="https://github.com/marcelle-mascarenhas/site-monalisa" target="_blank" class="btn">+
                                     Detalhes</a>
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                                 <img src="img/img-ela-resolve.png" alt="site-ela-resolve">
                                 <p><span>Ela Resolve - </span> Projeto idealizado por mim e desenvolvido para Residência de Software 2021.1 - Porto Digital | Finalista dentre os melhores projetos da edição.</p>
                                
-                                <a href="https://github.com/marcelle-mascarenhas/site-ela-resolve" class="btn">+
+                                <a href="https://github.com/marcelle-mascarenhas/site-ela-resolve" target="_blank"  class="btn">+
                                     Detalhes</a>
                             </div>
                         </div>
@@ -225,7 +225,7 @@
                                 <i class="fas fa-times projeto-close-btn"></i>
                                 <img src="img/img-form-track.png" alt="">
                                 <p><span>Form Tracking - </span> Projeto desenvolvido para Residência de Software 2021.2, baseado na proposta da empresa <b>Cesar</b> - Porto Digital |     Finalista dentre os melhores projetos da edição.</p>
-                                <a href="https://github.com/marcelle-mascarenhas/residencia-squad-cesar"
+                                <a href="https://github.com/marcelle-mascarenhas/residencia-squad-cesar" target="_blank" 
                                     class="btn">+ Detalhes</a>
                             </div>
                         </div>
@@ -238,8 +238,8 @@
     <div class="footer">
         <h2>Marcelle</h2>
         <div class="footer-social">
-            <a href="https://www.facebook.com/profile.php?id=100004773587551"><i class='bx bxl-facebook'></i></a>
-            <a href="https://www.instagram.com/mar.mascarenhas/"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100004773587551" target="_blank" ><i class='bx bxl-facebook'></i></a>
+            <a href="https://www.instagram.com/mar.mascarenhas/" target="_blank" ><i class='bx bxl-instagram'></i></a>
 
         </div>
 
